--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^2.2.1"
+    "webpack": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
 }
