--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "carbon-calculator-app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -10,8 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.5",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.3.2",
@@ -23,18 +22,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "webpack": "^2.7.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build2": "webpack -d --watch",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start2": "nodemon server/index.js",
-    "build-vite": "vite build",
-    "dev": "vite serve --host"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
