--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@typeform/embed-react": "^1.17.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.5",
     "axios": "^0.27.2",
