--- a/package.json
+++ b/package.json
@@ -6,23 +6,27 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@popperjs/core": "^2.11.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@typeform/embed-react": "^1.17.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.5",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.3.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
+    "postcss": "^8.4.14",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -55,9 +59,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6",
+    "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.2",
     "vite-plugin-html": "^3.2.0"
